[gd_scene load_steps=18 format=3 uid="uid://cygb8wb8gdlit"]

[ext_resource type="Script" uid="uid://0w6n7ykd5gab" path="res://scripts/UI/Popups/property_card.gd" id="1_dq6si"]
[ext_resource type="Texture2D" uid="uid://b43nldvjs1pdk" path="res://assets/1Passport.png" id="2_q6d4w"]
[ext_resource type="FontFile" uid="uid://drdae01rqb3r3" path="res://Fonts/LilitaOne-Regular.ttf" id="3_peq64"]
[ext_resource type="FontFile" uid="uid://b7ua41mspaxmj" path="res://data/LilitaOne-Regular.ttf" id="4_wo7wq"]
[ext_resource type="StyleBox" uid="uid://b14tpm8fhc5ca" path="res://styles/hover2.tres" id="5_peq64"]
[ext_resource type="StyleBox" uid="uid://k0v1kbehouky" path="res://styles/pressed2.tres" id="6_wo7wq"]
[ext_resource type="StyleBox" uid="uid://c4ghon41c0rkb" path="res://styles/normal2.tres" id="7_2yku7"]
[ext_resource type="StyleBox" uid="uid://c0d7whevbcdky" path="res://styles/X_button_hover.tres" id="8_3ax7g"]
[ext_resource type="StyleBox" uid="uid://dseu26saha3jj" path="res://styles/X_button_pressed.tres" id="9_1gor6"]
[ext_resource type="StyleBox" uid="uid://bhss2ha5ly4wb" path="res://styles/X_button.tres" id="10_iefll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q6d4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qp3rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_egv2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2ln7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wo7wq"]
bg_color = Color(0.227451, 0.184314, 0.168627, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.227451, 0.184314, 0.168627, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wf05x"]
bg_color = Color(0.117647, 0.105882, 0.101961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.117647, 0.105882, 0.101961, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2ln7"]
bg_color = Color(0.164706, 0.141176, 0.133333, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.164706, 0.141176, 0.133333, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="PropertyCard" type="CanvasLayer"]
script = ExtResource("1_dq6si")

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -275.0
offset_right = 215.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q6d4w")
expand_mode = 1

[node name="Flag_Image" type="TextureRect" parent="BackGround"]
layout_mode = 2
offset_left = 52.0
offset_top = 1.0
offset_right = 369.0
offset_bottom = 88.0
expand_mode = 3

[node name="PropertyName" type="Label" parent="BackGround/Flag_Image"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -11.5
offset_right = 83.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 28
text = "Property name"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround"]
layout_mode = 0
offset_left = 12.0
offset_top = 96.0
offset_right = 169.0
offset_bottom = 236.0

[node name="Description" type="VBoxContainer" parent="BackGround/VBoxContainer"]
layout_mode = 2

[node name="Cell_owner" type="Label" parent="BackGround/VBoxContainer/Description"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 20
text = "Cell Owner:"

[node name="PropertyCost" type="Label" parent="BackGround/VBoxContainer/Description"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 20
text = "Property cost:"

[node name="Rent" type="Label" parent="BackGround/VBoxContainer/Description"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 20
text = "Rent:"

[node name="NumberOfHouse" type="Label" parent="BackGround/VBoxContainer/Description"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 20
text = "Number of house:"

[node name="HouseCost" type="Label" parent="BackGround/VBoxContainer/Description"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wo7wq")
theme_override_font_sizes/font_size = 20
text = "House cost: "

[node name="HBoxContainer" type="VBoxContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -183.0
offset_right = 109.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 0

[node name="BuyHouseButton" type="Button" parent="BackGround/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_q6d4w")
theme_override_styles/hover = ExtResource("5_peq64")
theme_override_styles/pressed = ExtResource("6_wo7wq")
theme_override_styles/normal = ExtResource("7_2yku7")
text = "Buy house"

[node name="SellHouseButton" type="Button" parent="BackGround/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_qp3rp")
theme_override_styles/hover = ExtResource("5_peq64")
theme_override_styles/pressed = ExtResource("6_wo7wq")
theme_override_styles/normal = ExtResource("7_2yku7")
text = "Sell house"

[node name="CloseButton" type="Button" parent="BackGround"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_peq64")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_egv2b")
theme_override_styles/hover = ExtResource("8_3ax7g")
theme_override_styles/pressed = ExtResource("9_1gor6")
theme_override_styles/normal = ExtResource("10_iefll")
text = "X"

[node name="SellButton" type="Button" parent="BackGround"]
layout_mode = 2
anchor_left = 0.824
anchor_top = 0.941
anchor_right = 0.824
anchor_bottom = 0.941
offset_left = -62.32
offset_top = -24.55
offset_right = 62.68
offset_bottom = 24.45
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_wo7wq")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_g2ln7")
theme_override_styles/hover = SubResource("StyleBoxFlat_wo7wq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wf05x")
theme_override_styles/normal = SubResource("StyleBoxFlat_g2ln7")
text = "Sell Property"

[connection signal="pressed" from="BackGround/HBoxContainer/BuyHouseButton" to="." method="_on_buy_house_button_pressed"]
[connection signal="pressed" from="BackGround/HBoxContainer/SellHouseButton" to="." method="_on_sell_house_button_pressed"]
[connection signal="pressed" from="BackGround/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BackGround/SellButton" to="." method="_on_sell_button_pressed"]
